--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse nav-items" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="{{ '/measure-z' | url }}">Measure Z</a>
+          <a class="nav-link" href="{{ 'measure-z' | url }}">Measure Z</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ /program-impacts | url }}">Program Impacts</a>
