--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,6 +94,7 @@ ul li.navbar {
 
 .index-hero {
   background-image: url("assets/images/FPS-background.png"); /* The image used */
+  background-color: #013743;
   height: auto; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
