adjust file path config

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -4,10 +4,9 @@
     <div class="row">
 
       <div class="col-4">
-        <p style="text-indent:4rem;">Created by
+        <p style="text-indent:4rem;">Created by<br/>
           <a href="https://openoakland.org" style="border:none;"><img src="assets/images/OpenOakland-logo-color-1000.png" alt="OpenOakland logo" width="250px" style="margin-top:-.8rem;"></a>
         </p>
-
       </div>
 
       <div class="col-8">
