--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -5,7 +5,7 @@
 
     <div class="container"> {# Center content #}
 
-    <b><a class="navbar-brand" href="{{ '/' | url }}">Funding Public Safety</a></b>
+    <b><a class="navbar-brand" href="/">Funding Public Safety</a></b>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,16 +13,16 @@
     <div class="collapse navbar-collapse nav-items" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/measure-z">Measure Z</a>
+          <a class="nav-link" href="about-measure-z">Measure Z</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/program-impacts">Program Impacts</a>
+          <a class="nav-link" href="/funding-public-safety/program-impacts/">Program Impacts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ /get-involved | url }}">Get Involved</a>
+          <a class="nav-link" href="/funding-public-safety/get-involved/">Get Involved</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ /about-funding-public-safety | url }}">About FPS</a>
+          <a class="nav-link" href="/funding-public-safety/about-funding-public-safety/">About FPS</a>
         </li>
       </ul>
     </div>
