--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -5,7 +5,7 @@
 
     <div class="container"> {# Center content #}
 
-    <b><a class="navbar-brand" href="/">Funding Public Safety</a></b>
+    <b><a class="navbar-brand" href="/funding-public-safety/">Funding Public Safety</a></b>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
