--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,4 +1,4 @@
-
+<header class="site-header fixed-top">
 <div class="container-fluid"> {# Apply full-width #}
 <nav class="navbar navbar-expand-lg navbar-light">
 
@@ -31,3 +31,4 @@
 
 </nav>
 </div>
+</header>
