--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -4,7 +4,7 @@
 
     <div class="container"> {# Center content #}
 
-    <b><a class="navbar-brand" href="/">Funding Public Safety</a></b>
+    <b><a class="navbar-brand" href="{{ '/' | url }}">Funding Public Safety</a></b>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse nav-items" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/about-measure-z">Measure Z</a>
+          <a class="nav-link" href="{{ '/about-measure-z' | url }}">Measure Z</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/program-impacts">Program Impacts</a>
