Update relative links paths across site

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -15,13 +15,13 @@
           <a class="nav-link" href="{{ '/about-measure-z' | url }}">Measure Z</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/program-impacts">Program Impacts</a>
+          <a class="nav-link" href="{{ '/program-impacts' | url }}">Program Impacts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/get-involved">Get Involved</a>
+          <a class="nav-link" href="{{ '/get-involved' | url }}">Get Involved</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about-funding-public-safety">About FPS</a>
+          <a class="nav-link" href="{{ '/about-funding-public-safety' | url }}">About FPS</a>
         </li>
       </ul>
     </div>
