Add Spending viz

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -12,10 +12,13 @@
     <div class="collapse navbar-collapse nav-items" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="{{ '/about-measure-z' | url }}">Measure Z</a>
+          <a class="nav-link" href="{{ '/about-measure-z' | url }}">About Measure Z</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ '/program-impacts' | url }}">Program Impacts</a>
+          <a class="nav-link" href="{{ '/spending' | url }}">Spending</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ '/program-impacts' | url }}">Impacts</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ '/get-involved' | url }}">Get Involved</a>
