--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -9,8 +9,19 @@
         </p>
       </div>
 
-      <div style='width: 60%; max-width: 600px'>
+      <div style='width: 50%; max-width: 600px' class='mr-4'>
         <b>Funding Public Safety</b> explores how Oakland spends Measure Z's approximately $24 million annual budget, so Oaklanders can better understand the City's approach to public safety and violence prevention.
+      </div>
+
+      <div class='row no-gutters my-4'>
+        <div class='col- mr-1'>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+          </svg>
+        </div>
+        <div class='col-'>
+          <a href={{ 'contact-us' | relativeUrl}} class='text-reset'>Contact Us</a>
+        </div>
       </div>
 
     </div>
