Update bug warning bar language

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,6 +1,6 @@
 <div class='fixed-top'>
   <div class="alert alert-warning my-0 text-center" role="alert">
-    This site is a work in progress and may contain errors or bugs. <a href="https://forms.gle/hKAEcA5AU5rxJz3i7">Submit an issue</a>.
+    This site is a work in progress and may contain errors, omissions or bugs. <a href="https://forms.gle/hKAEcA5AU5rxJz3i7">Share your feedback</a>.
   </div>
   <header class="site-header my-0">
     <div class="container-fluid"> {# Apply full-width #}
